--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 	<body>
 
 		<div class="reveal">
-
+			<div class="slides">
+			<section>
+				hi
+			</section>
+		</div>
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
