--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js – The HTML Presentation Framework</title>
+		<title>Mentorship in Canadian Organizations</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -39,7 +39,7 @@
 		<div class="reveal">
 			<div class="slides">
 			<section>
-				hi
+				an apology	
 			</section>
 		</div>
 		</div>
