--- a/index.html
+++ b/index.html
@@ -39,8 +39,17 @@
 		<div class="reveal">
 			<div class="slides">
 			<section>
+				<p>Mentorship in Canadian Organizations</p>
+				<p>John Fink</p>
+			</section>
+
+			<section>
 				an apology	
 			</section>
+			<section>
+				any questions?
+		        </section>
+			
 		</div>
 		</div>
 
