--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
 				an apology	
 			</section>
 			<section>
+				My mentorship story
+			</section>
+			<section>
+				What I want to do
+			</section>
+			<section>
 				any questions?
 		        </section>
 			
